feat: Criando respostas usualmente entre todas as rotas
