# domain/Base/Docs/Schemas/Errors/UnauthorizedResponseSchema.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace Base\Base\Docs\Schemas\Errors;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(
+    schema: 'UnauthorizedResponseSchema'
+)]
+class UnauthorizedResponseSchema
+{
+    #[OA\Property(
+        description: 'Não autorizado',
+        example: 'Credenciais inválidas.'
+    )]
+    public string $message;
+}
